bugfix: allow wrapping in lms-ui-filter-definition

--- a/css/style.less
+++ b/css/style.less
@@ -3490,6 +3490,7 @@ div.lms-ui-filter-container {
 	div.lms-ui-filter-definition {
 		display: flex;
 		flex-wrap: wrap;
+		white-space: normal;
 		width: 80%;
 		& > *,
 		& > form > * {
